修改cpp代码测试间隔点。

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -32,3 +32,6 @@ target_compile_definitions(
 )
 target_link_libraries(quick_start PUBLIC Fields2Cover)
 
+add_executable(test_asym_turning test_asym_turning.cpp)
+target_link_libraries(test_asym_turning PUBLIC Fields2Cover)
+
